# NNCompiler

./: .gitmodules  CMakeLists.txt  ReadMe.txt  run.sh
inc/: blob.hpp  caffe.pb.h  graph.hpp  instPacket_generated.h  layer.hpp  memalloc.hpp  network.hpp  node.hpp  types.h
inc/layers/: bnorm_layer.hpp  concat_layer.hpp  conv_layer.hpp  drop_layer.hpp  fc_layer.hpp  input_layer.hpp  pool_layer.hpp  relu_layer.hpp  scale_layer.hpp  softmax_layer.hpp
src/: blob.cc  caffe.pb.cc  graph.cc  layer.cc  main.cc  memalloc.cc  network.cc  node.cc
src/fbs/: instPacket.fbs
src/layers/: bnorm_layer.cc  concat_layer.cc  conv_layer.cc  drop_layer.cc  fc_layer.cc  input_layer.cc  pool_layer.cc  relu_layer.cc  scale_layer.cc  softmax_layer.cc
testsets/: lenet_iter_1000.caffemodel
